src/objects/dropzone__Configuration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>dropzone__Attachment__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dropzone__Community_Url__c</fullName>
        <label>Community Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>dropzone__Content__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Content</label>
        <type>Checkbox</type>
    </fields>
    <label>Configuration</label>
</CustomObject>